Added video conferencing

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -604,19 +604,12 @@
 						<section class="docs-section" id="conferencing-twilio">
 							<h2 class="section-heading">Twilio</h2>
 
-							<p>One further use case is to upscale and enhance video just from users who are broadcasting video over poor connections. This has the advantage of not having any end-user requirements, but this is only possible in architectures where server-side transcoding is possible. </p>
-
-
-							<p>While we currently don't have a server-side upscaler, it would be very easy to build, and the quality and performance would be much better than for client-side devices. If you'd like to implement server-side upscaling, we'd love to <a href="mailto: team@vectorly"> learn more about your requrements</a></p>
+							<p>Coming soon</p>
 						</section><!--//section-->
 
 						<section class="docs-section" id="conferencing-daily">
 							<h2 class="section-heading">Daily.co</h2>
-
-							<p>One further use case is to upscale and enhance video just from users who are broadcasting video over poor connections. This has the advantage of not having any end-user requirements, but this is only possible in architectures where server-side transcoding is possible. </p>
-
-
-							<p>While we currently don't have a server-side upscaler, it would be very easy to build, and the quality and performance would be much better than for client-side devices. If you'd like to implement server-side upscaling, we'd love to <a href="mailto: team@vectorly"> learn more about your requrements</a></p>
+							<p>Coming soon</p>
 						</section><!--//section-->
 
 
