--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -45,7 +45,7 @@
 			            <li class="list-inline-item"><a href="https://www.linkedin.com/company/vectorly"><i class="fab fa-linkedin fa-fw"></i></a></li>
 		                <li class="list-inline-item"><a href="https://angel.co/vectorly"><i class="fab fa-angellist fa-fw"></i></a></li>
 		            </ul><!--//social-list-->
-		            <a href="https://vectorly.io/upscaler/" class="btn btn-primary d-none d-lg-flex">Try it out</a>
+		            <a href="https://upscaler.vectorly.io/#/signup" class="btn btn-primary d-none d-lg-flex">Try it out</a>
 	            </div><!--//docs-top-utilities-->
             </div><!--//container-->
         </div><!--//branding-->
