Changed meta data, google analytics etc...

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Vectorly Documentation</title>
-
+    <title>Vectorly: AI Upscaling Documentation</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta content="Vectorly: AI Upscaling Documentation" property="og:title">
+	<meta
+			content="Vectorly's AI upscaler upscalens and your app's video content on users' devices as they watch it, letting them stream low resolution video and watch it in high definition."
+			name="description">
+	<meta content="https://vectorly.io/images/new/ai-compression-temporary.png" property="og:image">
 
-    <meta name="description" content="Vectorly AI Upscaler Documentation">
+	<meta content="Vectorly: Realtime AI Upscaling" property="twitter:title">
+	<meta
+			content="Vectorly's AI enhancer upscales your app's video content on users' devices as they watch it, letting them stream low resolution video and watch it in high definition."
+			property="twitter:description">
+	<meta content="https://vectorly.io/images/new/ai-compression-temporary.png" property="twitter:image">
+
     <meta name="author" content="Vectorly">
+
+	<meta property="og:type" content="website">
+	<meta content="summary_large_image" name="twitter:card">
+
     <link rel="shortcut icon" href="assets/images/vectorly-logo-circle.svg">
 
     <!-- Google Font -->
@@ -23,6 +36,17 @@
 
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
+
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134514531-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-134514531-1');
+	</script>
 
 </head>
 
@@ -902,6 +926,9 @@
     <script src="assets/plugins/jquery.scrollTo.min.js"></script>
     <script src="assets/plugins/lightbox/dist/ekko-lightbox.min.js"></script>
     <script src="assets/js/docs.js"></script>
+
+
+
 
     <script type="text/javascript">
         window._mfq = window._mfq || [];
