--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -581,7 +581,7 @@
 
 
 							<pre><code>
-   const upscaler  = new vectorlyUpscaler(document.getElementById("remoteVideo"), , {token: 'insert-vectorly-token-here'}, {width: width, height: height});
+   const upscaler  = new vectorlyUpscaler(document.getElementById("remoteVideo"), {token: 'insert-vectorly-token-here'});
 
 </code></pre>
 
