--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -95,6 +95,7 @@
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder mr-2"><i class="fas fa-laptop-code"></i></span>Web</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-usage">Basic usage</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-plugins">Plugins</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-performance">Performance</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-events">Events</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-controls">Controls</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-styling">Styling and Scaling</a></li>
@@ -353,6 +354,96 @@
 
 						</p>
 
+
+					<h4 class="section-heading" id="item-3-performance">Performance Considerations</h4>
+
+					<p>AI Upscaling does require some computational effort, however it is mostly on the graphics card, so AI Upscaling's impact on CPU is limited. The amount of computation (and therefore the framerate / performance) depends on the size of input video you are upscaling</p>
+
+					<p>The following table should give a rough idea of the output performance for different input video resolutions.</p>
+
+					<div class="table-responsive my-4">
+						<table class="table table-striped">
+
+							<tr>
+								<th scope="col"></th>
+								<th scope="col">240p -> 480p/720p</th>
+								<th scope="col">360p -> 720p/1080p</th>
+								<th scope="col">480p -> 960p/1440p</th>
+							</tr>
+
+							<tbody>
+
+
+							<tr>
+								<th scope="row">High End Smartphone</th>
+								<td>120 fps</td>
+								<td>40 fps</td>
+								<td>14fps</td>
+							</tr>
+
+							<tr>
+								<th scope="row">Mid-range Smartphone</th>
+
+								<td>80 fps</td>
+								<td>28 fps</td>
+								<td>9 fps</td>
+							</tr>
+
+							<tr>
+								<th scope="row">Low-End Smartphone</th>
+
+								<td>20fps</td>
+								<td>6fps</td>
+								<td>3fps</td>
+							</tr>
+
+							<tr>
+
+								<th scope="row">Mid-range Laptop</th>
+
+								<td>100fps</td>
+								<td>35fps</td>
+								<td>8fps</td>
+							</tr>
+
+							<tr>
+
+								<th scope="row">GPU Desktop</th>
+
+								<td>200+fps</td>
+								<td>200+fps</td>
+								<td>80 fps</td>
+							</tr>
+
+
+							</tbody>
+						</table>
+					</div>
+
+
+					<p>You can measure the fps on any given device by adding the <code>analyticsEnabled</code> flag as <code>true</code> in the configuration parameters.
+
+
+					<pre>
+							 <code>
+  const config = {
+	   token: '...',
+	   analyticsEnabled: true
+   };
+
+   const upscaler = new vectorlyUpscaler(video, config);
+							 </code>
+						 </pre>
+
+					</p>
+
+
+					<p>You can then measure the fps at any time with <code>upscaler.metrics.fps</code> property. It's recommended to stick to 240p or 360p inputs, as mid-range devices tend to struggle with larger inputs. You can also <a href="#item-3-controls">disable upscaling</a>  if the fps gets too low.</p>
+
+
+
+
+					<p></p>
 
 						<h2 class="section-heading" id="item-3-events">Events</h2>
 
