Added mobile performance caveat

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -359,7 +359,7 @@
 
 					<p>AI Upscaling does require some computational effort, however it is mostly on the graphics card, so AI Upscaling's impact on CPU is limited. The amount of computation (and therefore the framerate / performance) depends on the size of input video you are upscaling</p>
 
-					<p>The following table should give a rough idea of the output performance for different input video resolutions.</p>
+					<p>The following table should give a rough idea performance for different input video resolutions. These results are only for Web environments. Our mobile SDKs will have access to more powerful native libraries, enabling significantly better performance.</p>
 
 					<div class="table-responsive my-4">
 						<table class="table table-striped">
