Added an electron section for users with electron enviroments (e.g. Tandem)

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -95,6 +95,7 @@
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder mr-2"><i class="fas fa-laptop-code"></i></span>Web</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-usage">Basic usage</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-plugins">Plugins</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-electron">Electron</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-performance">Performance</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-events">Events</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-controls">Controls</a></li>
@@ -354,6 +355,11 @@
 
 						</p>
 
+
+					<h4 class="section-heading" id="item-3-electron">Electron</h4>
+					<p>If you're building an electron app, the Vectorly library is fairly plug and play, and will work with either CDN or NPM installation. </p>
+
+					<p>You can see a demo electron app repostory <a href="https://github.com/Vectorly/vectorly-electron-demo">here</a></p>
 
 					<h4 class="section-heading" id="item-3-performance">Performance Considerations</h4>
 
