--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -653,8 +653,8 @@
 					<p>You need to set the input width and height of your input image or video streaming using the <code>w</code> and <code>h</code> properties in the constructor.</p>
 					<p>Based on whether you are using  a 2X network, or 3X network, it will set the canvas.width and canvas.height property to 2x or 3x the specified <code>w</code> and <code>h</code>.</p>
 					<p>If you want your canvas to be displayed at anything other than <code>2*w</code>by <code>2*h</code> on the screen, you should use CSS styling.</p>
-					<pre><code>canas.style.width = desiredWidth + "px";
-canas.style.height = desiredheight + "px";
+					<pre><code>canvas.style.width = desiredWidth + "px";
+canvas.style.height = desiredheight + "px";
 </code></pre>
 					<p>The browser will still upscale the image from <code>wxh</code> to  <code>2*w x 2*h</code>, but will then use CSS styling &amp; scaling (bicubic scaling) to scale the final output to the  height/width you specify via CSS.</p>
 
