Added demo repo link

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -913,11 +913,13 @@ canvas.style.height = desiredheight + "px";
 
 							<p>This also works with a publisher object. Refer to the <a href="https://tokbox.com/developer/guides/customize-ui/js/">Vonage documentation</a>  for styling - Vectorly's upscaler will fit within the styling defined by OpenTok.</p>
 
+							<p>See our example repistory for a <a href="https://github.com/Vectorly/ai-upscaler-examples/tree/master/vonage-demo"> working code example </a></p>
 						</section><!--//section-->
 
 						<section class="docs-section" id="conferencing-daily">
 							<h2 class="section-heading">Daily.co</h2>
 							<p>You can integrate Vectorly's AI upscaler with <a href="daily.co">Daily.co</a> if you're building a custom <a href="https://docs.daily.co/docs/build-a-custom-video-chat-interface">custom video chat interface </a>. Using the default React code sample from Daily, we've built a full working <a href="https://github.com/Vectorly/daily-call-object/">demo reference</a> </p>
+
 
 							<pre><code>
    useEffect(() => {
